[gd_scene load_steps=8 format=3 uid="uid://e06cnmw21fka"]

[ext_resource type="LabelSettings" uid="uid://efdir2vdny11" path="res://assets/GM_32_Dark.tres" id="1_fj1k0"]
[ext_resource type="Script" path="res://Scripts/game.gd" id="1_maett"]
[ext_resource type="Texture2D" uid="uid://8d5kqo5otgar" path="res://assets/ui/blue_button00.png" id="2_e6enx"]
[ext_resource type="Texture2D" uid="uid://bfhk52owvcgh" path="res://assets/ui/green_button00.png" id="3_foyva"]
[ext_resource type="LabelSettings" uid="uid://bb630qrhxr0ef" path="res://assets/GM_32_White.tres" id="4_jqxyn"]
[ext_resource type="PackedScene" uid="uid://xeretput34ii" path="res://Scenes/scorer.tscn" id="6_gk3e1"]
[ext_resource type="PackedScene" uid="uid://hduhwwq3fhnt" path="res://Scenes/game_over_ui.tscn" id="7_ixxtv"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_maett")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="TilesContainer" type="GridContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/margin_right = 12

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainerMoves" type="HBoxContainer" parent="HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainerMoves"]
layout_mode = 2
size_flags_horizontal = 3
text = "MOVES"
label_settings = ExtResource("1_fj1k0")
vertical_alignment = 1

[node name="LabelMoves" type="Label" parent="HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainerMoves"]
layout_mode = 2
text = "000"
label_settings = ExtResource("1_fj1k0")
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainerPairs" type="HBoxContainer" parent="HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainerPairs"]
layout_mode = 2
size_flags_horizontal = 3
text = "PAIRS"
label_settings = ExtResource("1_fj1k0")
vertical_alignment = 1

[node name="LabelPairs" type="Label" parent="HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainerPairs"]
layout_mode = 2
text = "00/12"
label_settings = ExtResource("1_fj1k0")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Spacer" type="Control" parent="HBoxContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="ExitButton" type="TextureButton" parent="HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_e6enx")
texture_pressed = ExtResource("3_foyva")

[node name="LabelExit" type="Label" parent="HBoxContainer/MarginContainer2/VBoxContainer/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "EXIT"
label_settings = ExtResource("4_jqxyn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Scorer" parent="." instance=ExtResource("6_gk3e1")]

[node name="GameOverUI" parent="." instance=ExtResource("7_ixxtv")]
visible = false
layout_mode = 1

[node name="Sound" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="HBoxContainer/MarginContainer2/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
